    * Fixed: empty config files were created if the number of files to download was smaller than the number of config files. Now each config file will have at least 4 urls.
    * curl: shorter connect-time - 3 sec.
    * curl: shorter max-time - 60sec.
    * curl: three retries
    * create_prefix_instructions_for_item_config_file checks if folder exists before issuing mkdir.

    user visible changes, admin:
    * New command: verify-index, helps admin find problems in index and info map.

    programmer visible changes:
    * quoteme_single, quoteme_double moved to utils for all to enjoy.
    * member install_definitions_index, method read_index, moved to InstlInstanceBase so instlAdmin can also use them.
    * InstallItem.add_source also adds the type for the source (!file, !dir, et...)
10/2/2014 0.8.2  Shai Shasag <shai@waves.com>
    
    user visible changes, client:
    * Fixed wrong relative path created for create-links command.
    * Added time measurements to batch file produces for windows.
    * Removed redundant quotes from echo messages on windows.
    * Added DownloadTool_win_curl in one-by-one and config-file modes.

    user visible changes, admin:
    * usage of $(SVN_CLIENT_PATH) instead of svn in all adming commands.
    * Fixed: fix-props output batch file was not written to the current folder.
    * Fixed wrong relative path created for create-links command.

    programmer visible changes:
    * Creation of PlatformSpecificHelper moved to do_command so it can take to consideration settings from the yaml file.

3/2/2014 0.8.1 Shai Shasag <shai@waves.com>

    user visible changes, client:
    * Little faster sync/copy/syncopy due to optimiztions in SVNItem.
    * Fixed copy_dir_to_dir on Mac that did not create hard links
    * Fixed new_item_at_path that did not create the have map correctly

    user visible changes, admin:
    * new command: create-repo-rev-file, to separate repo rev file creation and uploading.