@@ -8,6 +8,9 @@
     * curl: shorter max-time - 60sec.
     * curl: three retries
     * create_prefix_instructions_for_item_config_file checks if folder exists before issuing mkdir.
+    * sync command: Hack to force untaring of .wtar files by forcing them to be downloaded again.
+    * create_config_files will return empty list if there were no files to download.
+    * Windows untaring got a -bd flag to reduce verbosity.
 
     user visible changes, admin:
     * New command: verify-index, helps admin find problems in index and info map.
@@ -16,6 +19,7 @@
     * quoteme_single, quoteme_double moved to utils for all to enjoy.
     * member install_definitions_index, method read_index, moved to InstlInstanceBase so instlAdmin can also use them.
     * InstallItem.add_source also adds the type for the source (!file, !dir, et...)
+    
 10/2/2014 0.8.2  Shai Shasag <shai@waves.com>
     
     user visible changes, client:
